[gd_scene load_steps=2 format=3 uid="uid://dp7k2m5qr8vnx"]

[ext_resource type="Script" uid="uid://5cjenw3gw7mt" path="res://scripts/ui/tactical_hud.gd" id="1_hud"]

[node name="TacticalHUD" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="TopLeftPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 160.0
offset_bottom = 50.0
mouse_filter = 1

[node name="PauseButton" type="Button" parent="TopLeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.3, 1)
theme_override_colors/font_hover_color = Color(1, 0.7, 0.5, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.3, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "⏸ PAUSE"

[node name="TopBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 170.0
offset_bottom = 70.0
grow_horizontal = 2
mouse_filter = 1

[node name="HBox" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TurnContainer" type="VBoxContainer" parent="TopBar/HBox"]
layout_mode = 2

[node name="TurnHeader" type="Label" parent="TopBar/HBox/TurnContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "MISSION PROGRESS"

[node name="TurnLabel" type="Label" parent="TopBar/HBox/TurnContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.690196, 0, 1)
theme_override_font_sizes/font_size = 20
text = "TURN: 1"

[node name="StabilityContainer" type="VBoxContainer" parent="TopBar/HBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_filter = 1

[node name="StabilityHeader" type="Label" parent="TopBar/HBox/StabilityContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "COLONIST LIFE SUPPORT"

[node name="StabilityLabel" type="Label" parent="TopBar/HBox/StabilityContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.690196, 0, 1)
theme_override_font_sizes/font_size = 16
text = "CRYO-STABILITY: 100%"

[node name="StabilityBar" type="ProgressBar" parent="TopBar/HBox/StabilityContainer"]
layout_mode = 2
mouse_filter = 1
value = 100.0
show_percentage = false

[node name="HaulContainer" type="VBoxContainer" parent="TopBar/HBox"]
layout_mode = 2
mouse_filter = 1

[node name="HaulHeader" type="Label" parent="TopBar/HBox/HaulContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "MISSION HAUL"

[node name="FuelLabel" type="Label" parent="TopBar/HBox/HaulContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 14
text = "FUEL COLLECTED: +0"

[node name="ScrapLabel" type="Label" parent="TopBar/HBox/HaulContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "SCRAP COLLECTED: +0"

[node name="CryoWarning" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 80.0
offset_right = 250.0
offset_bottom = 115.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "⚠ CRYO-FAILURE: LOSING 10 COLONISTS ⚠"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SidePanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 85.0
offset_bottom = 480.0
grow_horizontal = 0
mouse_filter = 1

[node name="VBox" type="VBoxContainer" parent="SidePanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SelectedHeader" type="Label" parent="SidePanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "SELECTED UNIT"
horizontal_alignment = 1

[node name="SelectedName" type="Label" parent="SidePanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.690196, 0, 1)
theme_override_font_sizes/font_size = 22
text = "CAPTAIN"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SidePanel/VBox"]
layout_mode = 2

[node name="HPContainer" type="HBoxContainer" parent="SidePanel/VBox"]
layout_mode = 2
mouse_filter = 1
theme_override_constants/separation = 10

[node name="HPLabel" type="Label" parent="SidePanel/VBox/HPContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
theme_override_font_sizes/font_size = 14
text = "HEALTH: 100 / 100"

[node name="HPBar" type="ProgressBar" parent="SidePanel/VBox/HPContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
max_value = 100.0
value = 100.0
show_percentage = false

[node name="APContainer" type="HBoxContainer" parent="SidePanel/VBox"]
layout_mode = 2
mouse_filter = 1
theme_override_constants/separation = 10

[node name="APLabel" type="Label" parent="SidePanel/VBox/APContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
theme_override_font_sizes/font_size = 14
text = "ACTION POINTS: 2 / 2"

[node name="APBar" type="ProgressBar" parent="SidePanel/VBox/APContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
max_value = 2.0
value = 2.0
show_percentage = false

[node name="HSeparator2" type="HSeparator" parent="SidePanel/VBox"]
layout_mode = 2

[node name="MoveLabel" type="Label" parent="SidePanel/VBox"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 14
text = "MOVEMENT RANGE: 5 tiles"

[node name="AttackLabel" type="Label" parent="SidePanel/VBox"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 0.5, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "ATTACK RANGE: 10 tiles"

[node name="CoverBonusLabel" type="Label" parent="SidePanel/VBox"]
visible = false
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.4, 0.9, 1, 1)
theme_override_font_sizes/font_size = 14
text = "COVER BONUS: +15% ACC"

[node name="StatusLabel" type="Label" parent="SidePanel/VBox"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "STATUS: ▶ READY TO ACT"

[node name="HSeparator3" type="HSeparator" parent="SidePanel/VBox"]
layout_mode = 2

[node name="AbilityContainer" type="VBoxContainer" parent="SidePanel/VBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 4

[node name="AbilityHeader" type="Label" parent="SidePanel/VBox/AbilityContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 1, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "SPECIALIST ABILITY:"

[node name="AbilityButton" type="Button" parent="SidePanel/VBox/AbilityContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.8, 1)
theme_override_colors/font_hover_color = Color(0.7, 1, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "[ OVERWATCH ] - 1 AP"

[node name="AbilityDesc" type="Label" parent="SidePanel/VBox/AbilityContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 11
text = "Enter overwatch stance. Automatically shoot the first enemy that moves within line of sight."
autowrap_mode = 2

[node name="HSeparator4" type="HSeparator" parent="SidePanel/VBox"]
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="SidePanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EndTurnButton" type="Button" parent="SidePanel/VBox/ButtonContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 0.690196, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "[ END TURN ]"

[node name="ExtractButton" type="Button" parent="SidePanel/VBox/ButtonContainer"]
visible = false
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_colors/font_hover_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "[ EXTRACT TEAM ]"

[node name="HSeparator5" type="HSeparator" parent="SidePanel/VBox"]
layout_mode = 2

[node name="HelpContainer" type="VBoxContainer" parent="SidePanel/VBox"]
layout_mode = 2

[node name="HelpHeader" type="Label" parent="SidePanel/VBox/HelpContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 11
text = "CONTROLS:"

[node name="HelpLabel" type="Label" parent="SidePanel/VBox/HelpContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 11
text = "• Click tile to MOVE (1 AP)
• Click enemy to ATTACK (1 AP)
• Press ESC or PAUSE button"
autowrap_mode = 2
